--- a/hackaton.Rmd
+++ b/hackaton.Rmd
@@ -1002,5 +1002,40 @@ forest_plot_colored <- ggplot(forest_data,
 print(forest_plot_colored)
 ```
 
+Итого получилось, что 
+Женщины чаще имеют страховку в 1.067 раз CI (1.045 - 1.089)
+У людей в браке  есть страховка в 1.2 раза чаще, CI(1.179 - 1.237)
+У самозанятых есть страховка в 0.84 раз реже, CI(0.809 - 0.879)
+У здоровых есть страховка в 1.11 раза чаще, CI(1.055 - 1.164)
 
+Регион проживания:
+У проживающих на северовостоке есть страховка в 0.974  раза реже, чем у тех, кто проживает на midwest CI(0.947 - 1.002)
+У проживающих на западе есть страховка в 0.964 раза реже, чем у тех, кто проживает на юге CI(0.935 - 0.995)
+у проживающих на юге есть страховка в 0.915 раза реже, чем у тех, кто проживает на midwest CI(0.892 - 0.939)
+у проживающих на западе есть страховка в 0.883 раза реже, чем у тех, кто проживает на midwest CI(0.856 - 0.910)
+у проживающих на юге есть страховка в 0.939 раза реже, чем у тех, кто проживает на северовостоке CI(0.913 - 0.966)
+у проживающих на западе есть страховка в 0.906 раза реже, чем у тех, кто проживает на северовостоке CI(0.877 - 0.936)
+То есть страховка встречается чаще всего у людей с северовостока и midwest
+
+Образование поделили на категории
+Отсутствие или другое, школьный уровень, высшее образование
+У людей со школьным уровнем образования в 1.2 раза чаще встречается страховка, чем у людей без образования или другое CI(1.17, 1.26)
+У людей с высшим образования в 1.37 раза чаще встречается страховка, чем у людей без образования или другое CI(1.32, 1.42)
+у людей с высшим образования в 1.12 раза чаще встречается страховка, чем у людей со школьным уровнем образования CI(1.10, 1.47)
+Сильнее связь с людьми с высшим образование (bachelor, master, PhD)
+
+Этнос
+у европеоидных людей в 1.06 раза чаще встречается страховка, чем у афроамериканцев CI(1.03, 1.10)
+у прочих людей в 0.99 раза реже встречается страховка, чем у афроамериканцев CI(0.926, 1.05)
+у прочих людей в 0.93 раза реже встречается страховка, чем у европеоидных CI(0.877, 0.988)
+То есть сильнее связь с европеоидными людьми. 
+
+Возраст
+у людей старше 40 лет в 1.12 раз чаще встречается страховка CI(1.106324 - 1.152467) 
+
+Семья
+у тех у кого есть партнер в 1.06 раза чаще имеют страховку, чем те, у кого есть дети CI(1.03, 1.08)
+те, кто один в 0.97 раза реже имеют страховку, чем те, у кого есть дети CI(0.938788 1.002996)
+те, кто один в 0.91 раза реже имеют страховку, чем те, у кого есть партнер CI(0.8869362 0.9510029)"
+То есть сильнее связь в тех ситуациях, когда в семье 2 человека. 
 
