--- a/hackaton.Rmd
+++ b/hackaton.Rmd
@@ -35,6 +35,53 @@ library(epitools)
 set_flextable_defaults(table.layout = "autofit")
 ```
 
+
+#Факторы, ассоциированные с наличием медицинской страховки: вторичный анализ национального исследования
+
+
+1. ВВЕДЕНИЕ
+
+Обеспечение доступа к качественному медицинскому обслуживанию – одна из важнейших задач современного общества. В странах с рыночно-ориентированной системой здравоохранения, таких как США, наличие медицинской страховки (МС) является критическим фактором, снижающим финансовые барьеры на пути получения необходимой медицинской помощи. Несмотря на это, значительная часть населения остается без страхового покрытия, что порождает серьезные проблемы в сфере общественного здоровья и социального неравенства. В связи с этим идентификация факторов, определяющих вероятность обладания медицинской страховкой, приобретает высокую актуальность для формирования целенаправленной и эффективной социальной политики.
+
+Целью данного исследования является выявление факторов, ассоциированных с наличием у респондентов медицинской страховки. Используя данные кросс-секционного опроса, мы проанализируем, как демографические и социально-экономические характеристики связаны с вероятностью иметь страховое покрытие.
+
+
+2. МЕТОДЫ
+
+
+2.1 Дизайн исследования и источник данных
+
+Мы  провели вторичное кросс-секционное исследование. Анализ выполнялся на основе данных Обзора медицинских расходов (Medical Expenditure Panel Survey) за 1996 год. Датасет содержит информацию о респондентах, включая бинарную переменную insurance (наличие медицинской страховки), а также ряд независимых признаков.
+
+2.2 Переменные исследования
+
+Зависимая переменная:
+
+insurance — наличие медицинской страховки (бинарная: да/нет).
+
+Независимые переменные:
+
+Демографические: age (возраст, лет), gender (пол), ethnicity (этническая группа), married (состоит в браке).
+
+Социально-экономические: education (уровень образования), selfemp (статус самозанятого), region (регион проживания), family (количество членов семьи).
+
+Характеристики здоровья: health (самооценка здоровья как "здоров"), limit (наличие ограничений в деятельности).
+
+
+2.3. Методы статистического анализа
+
+На первом этапе исследования была получена общая характеристика выборки с помощью описательной статистики. Для категориальных переменных рассчитывались абсолютные и относительные частоты (проценты), а для количественных показателей - средние значения со стандартными отклонениями. Все расчеты были стратифицированы по статусу наличия медицинской страховки.
+
+На этапе однофакторного анализа для оценки статистической значимости связей между категориальными переменными и наличием страховки использовался критерий хи-квадрат Пирсона с поправкой Йейтса. Статистически значимыми считались различия при достижении уровня значимости p < 0,05.  Сила выявленных ассоциаций количественно оценивалась через расчет отношений рисков (RR) с построением 95% доверительных интервалов. 
+
+Статистический анализ проводился с использованием программной среды R версии 4.3.1. 
+
+2.4. Этика
+
+Исследование выполнено на вторичных обезличенных данных, в связи с чем одобрение этического комитета не требовалось.
+
+
+
 # Струкутура данных
 
 ```{r}
@@ -1038,4 +1085,38 @@ print(forest_plot_colored)
 те, кто один в 0.97 раза реже имеют страховку, чем те, у кого есть дети CI(0.938788 1.002996)
 те, кто один в 0.91 раза реже имеют страховку, чем те, у кого есть партнер CI(0.8869362 0.9510029)"
 То есть сильнее связь в тех ситуациях, когда в семье 2 человека. 
+
+#Результаты
+3. РЕЗУЛЬТАТЫ
+
+3.1. Описательная статистика
+В исследовании приняли участие 8802 респондента. Описательные характеристики всей выборки, а также отдельно групп лиц с медицинской страховкой и без нее, представлены в Таблице 1.
+
+Анализ таблицы выявил систематические различия между группами. Респонденты без страховки были в среднем моложе и реже состояли в браке. Среди незастрахованных была выше доля мужчин, самозанятых, а также представителей афроамериканской и других этнических групп.
+
+Образовательный профиль также различался: среди лиц без страховки преобладали респонденты без диплома и со средним образованием, тогда как среди застрахованных была выше доля лиц с высшим образованием.
+
+Что касается здоровья, респонденты без страховки реже оценивали свое здоровье как хорошее, однако наличие физических ограничений было сопоставимым между группами.
+
+Результаты однофакторного анализа выявили статистически значимые ассоциации между всеми изучаемыми факторами и наличием медицинской страховки, за исключением наличия физических ограничений.
+
+Социально-демографические детерминанты. Наиболее выраженная градиентная зависимость наблюдалась для уровня образования. По сравнению с лицами без образования, наличие высшего образования ассоциировалось с повышением вероятности страховки (бакалавры: RR = 1,661, 95% ДИ: 1,569-1,759; магистры: RR = 1,745, 95% ДИ: 1,645-1,850). Наличие брака увеличивало вероятность страховки (RR = 1,207, 95% ДИ: 1,178-1,237), тогда как женский пол и самозанятость, напротив, снижали её (RR = 0,937, 95% ДИ: 0,918-0,957 и RR = 0,844, 95% ДИ: 0,809-0,880 соответственно).
+
+Географические различия. Регион проживания значимо ассоциировался с вероятностью страховки. По сравнению с Западом, проживание в Среднем Западе увеличивало вероятность страховки (RR = 0,883, 95% ДИ: 0,856-0,910), а на Юге также наблюдалось повышение вероятности (RR = 0,965, 95% ДИ: 0,935-0,995).
+
+Показатели здоровья. Неудовлетворительная самооценка здоровья ассоциировалась с повышением вероятности страховки (RR = 1,108, 95% ДИ: 1,055-1,164), тогда как наличие физических ограничений не показало статистически значимой связи (RR = 1,016, 95% ДИ: 0,987-1,046).
+
+
+4. ОБСУЖДЕНИЕ
+
+Проведенный анализ выявил комплекс факторов, значимо ассоциированных с наличием медицинской страховки у респондентов. Ключевыми детерминантами оказались социально-экономические характеристики, в первую очередь — уровень образования и статус занятости.
+
+
+Связь с высшим образованием можно объяснить тем, что более высокий уровень образования связан с выходом на рынок труда, где работодатели предоставляют групповые страховки, а также с большей осведомленностью о важности страхования и финансовой возможностью его приобрести.
+
+5. ВЫВОД
+
+Проведенное исследование позволило идентифицировать ключевые социально-демографические и экономические детерминанты, ассоциированные с наличием медицинской страховки в США. Установлено, что вероятность наличия страхового покрытия ассоциирована с уровнем образования, семейным положением, статусом занятости, полом, этнической принадлежностью и регионом проживания.
+
+
 
